# SPLE

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/sple/: __init__.py
src/sple/idealized/: __init__.py  straight_joints.py  uniform_motion.py
src/sple_physics/idealized/: impulse.py
tests/: test_impulse.py  test_main_behavior.py  test_straight_joints.py  test_uniform_motion.py
